# wasm-benchmark

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
libs/matrix-math-wasm/: Cargo.toml
libs/matrix-math-wasm/src/: lib.rs
src/: main.ts
src/benchmarks/: matrix-math.ts
wasm_libs/matrix-math/: Cargo.toml
